# rfid-inventory-tracker

./: .gitignore  README.md
dashboard/: .air.toml  Dockerfile  Dockerfile.dev  docker-compose.yaml  go.mod  go.sum  query.sql  schema.sql  sqlc.yaml
dashboard/cmd/dashboard/: main.go
dashboard/migrations/: 00002_create_permissions_table.sql  00003_create_items_table.sql  00004_create_tags_table.sql  00005_create_transactions_table.sql  00006_rename_transaction_timestamp.sql  00007_rename_transaction_timestamp_unquote.sql
dashboard/repositories/: models.go  query.sql.go
dashboard/routes/auth/: login.go  middleware.go  signup.go
dashboard/routes/dashboard/: home.go
dashboard/routes/dashboard/items/: items.go
dashboard/routes/dashboard/tags/: tags.go
dashboard/types/: types.go
dashboard/views/: error.html
dashboard/views/auth/: login.html  signup.html
dashboard/views/dashboard/: home.html  items.html  tags.html
dashboard/views/fragments/: navbar.html
reader/: .clangd  .gitignore  CMakeLists.txt  README.md  compile_flags.txt  item_registration.c  item_registration.h  lwipopts.h  mqtt.c  mqtt.h  reader.c  reader.cpp.old
